Front-end libraries

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -13,7 +13,7 @@
     <!-- Chosen -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.css">
     <!-- Local CSS Styling -->
-    <link rel="stylesheet" type="text/css" href="assets/styles.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
@@ -191,7 +191,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
         <!-- Chosen -->
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
-        	<!-- Local Javascript -->
-    <!--     <script src="???"></script> -->
+        <!-- Local Javascript -->
+        <script src="assets/javascript/index.js"></script>
     </body>
     </html>
