--- a/app/public/home.html
+++ b/app/public/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Friend Finder</title>
     <!--Allows to handle most characters in the human language. No reason to not have.-->
@@ -7,7 +8,8 @@
     <!-- RESET -->
     <link rel="stylesheet" type="text/css" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
     <!-- Bootstrap 4.0 Beta -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
+        crossorigin="anonymous">
     <!-- Font Awesome Glyphicons -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <!-- Chosen -->
@@ -17,34 +19,43 @@
 </head>
 
 <body>
-	<div class="container">
-		<div class="jumbotron">
-			<h1 class="">Friend Finder</h1>
-			<hr>
-			<h2 class="">Answer a few basic questions. </h2>
-			<h2 class="">Then find the friend with the greatest compatibility!</h2>
-			<br>
+    <div class="container">
+        <div class="jumbotron">
+            <h1 class="">Friend Finder</h1>
+            <hr>
+            <h2 class="">Answer a few basic questions. </h2>
+            <h2 class="">Then find the friend with the greatest compatibility!</h2>
+            <br>
 
-			<div class="">
-				<a href="/survey"><button type="button" class="btn btn-lg btn-primary"><h4><span class="glyphicon glyphicon-list-alt"></span> Go to Survey</h4></button></a>	
-			</div>
+            <div class="">
+                <a href="/survey">
+                    <button type="button" class="btn btn-lg btn-primary">
+                        <h4>
+                            <span class="glyphicon glyphicon-list-alt"></span> Go to Survey</h4>
+                    </button>
+                </a>
+            </div>
 
-		</div>
-	    <footer class="footer">
-	      <div class="container">
-		        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/ykeanu/FriendFinder">GitHub Repo</a></p>
-	      </div>
-	    </footer>
+        </div>
+        <footer class="footer">
+            <div class="container">
+                <p>
+                    <a href="/api/friends">API Friends List</a> |
+                    <a href="https://github.com/ykeanu/FriendFinder">GitHub Repo</a>
+                </p>
+            </div>
+        </footer>
 
-	</div>
-        <!-- Jquery -->
-        <script src="https://code.jquery.com/jquery.js"></script>
-        <!-- Bootstrap -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-        <!-- Chosen -->
-	    <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
-        	<!-- Local Javascript -->
-        <script src="assets/javascript/index.js"></script>
+    </div>
+    <!-- Jquery -->
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <!-- Bootstrap -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
+        crossorigin="anonymous"></script>
+    <!-- Chosen -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
+    <!-- Local Javascript -->
+    <script src="assets/javascript/index.js"></script>
 </body>
 
 </html>
