--- a/app/public/home.html
+++ b/app/public/home.html
@@ -55,7 +55,7 @@
     <!-- Chosen -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
     <!-- Local Javascript -->
-    <script src="assets/javascript/index.js"></script>
+    <!-- <script type="text/javascript" src="assets/javascript/app.js"></script> -->
 </body>
 
 </html>
