--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -205,7 +205,7 @@
                 </div>
                 <div class="modal-body">
                     <h2 id="matchName"></h2>
-                    <img id="matchImg" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/6/005/064/1bd/3435aa3.jpg" alt="">
+                    <img id="matchImg" src="" alt="">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -223,7 +223,71 @@
     <!-- Chosen -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
     <!-- Local Javascript -->
-    <script src="assets/javascript/index.js"></script>
+    <!-- <script src="assets/javascript/app.js"></script> -->
+    <script>
+      // Chosen configuration
+var config = {
+    '.chosen-select': {},
+    '.chosen-select-deselect': { allow_single_deselect: true },
+    '.chosen-select-no-single': { disable_search_threshold: 10 },
+    '.chosen-select-no-results': { no_results_text: 'Oops, nothing found!' },
+    '.chosen-select-width': { width: "95%" }
+}
+for (var selector in config) {
+    $(selector).chosen(config[selector]);
+}
+
+// Capture the form inputs 
+$("#submit").on("click", function () {
+
+    // Form validation
+    function validateForm() {
+        var isValid = true;
+        $('.form-control').each(function () {
+            if ($(this).val() === '')
+                isValid = false;
+        });
+
+        $('.chosen-select').each(function () {
+
+            if ($(this).val() === "")
+                isValid = false
+        })
+        return isValid;
+    }
+
+    // If all required fields are filled
+    if (validateForm() == true) {
+        // Create an object for the user's data
+        var userData = {
+            name: $("#name").val(),
+            photo: $("#photo").val(),
+            scores: [$("#q1").val(), $("#q2").val(), $("#q3").val(), $("#q4").val(), $("#q5").val(), $("#q6").val(), $("#q7").val(), $("#q8").val(), $("#q9").val(), $("#q10").val(),]
+        }
+
+
+        // Grab the URL of the website
+        var currentURL = window.location.origin;
+
+        // AJAX post the data to the friends API. 
+        $.post(currentURL + "/api/friends", userData, function (data) {
+
+            // Grab the result from the AJAX post so that the best match's name and photo are displayed.
+            $("#matchName").text(data.name);
+            $('#matchImg').attr("src", data.photo);
+
+            // Show the modal with the best match 
+            $("#resultsModal").modal('toggle');
+
+        });
+    }
+    else {
+        alert("Please fill out all fields before submitting!");
+    }
+
+    return false;
+});
+    </script>
 </body>
 
 </html>
