--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -16,6 +16,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.css">
     <!-- Local CSS Styling -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <!-- Jquery -->
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <!-- Bootstrap -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
+        crossorigin="anonymous"></script>
+    <!-- Chosen -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
+    <!-- Local Javascript -->
+    <!-- <script src="assets/javascript/app.js"></script> -->
 </head>
 
 <body>
@@ -184,7 +193,7 @@
             <div class="container">
                 <p>
                     <a href="/api/friends">API Friends List</a> |
-                    <a href="https://github.com/afhaque/friendfinder">GitHub Repo</a>
+                    <a href="https://github.com/gracepark/FriendFinder">GitHub Repo</a>
                 </p>
             </div>
         </footer>
@@ -205,7 +214,7 @@
                 </div>
                 <div class="modal-body">
                     <h2 id="matchName"></h2>
-                    <img id="matchImg" src="" alt="">
+                    <img id="matchImg" src="https://www.w3schools.com/w3css/img_fjords.jpg" alt="">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -215,79 +224,72 @@
         </div>
     </div>
 
-    <!-- Jquery -->
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <!-- Bootstrap -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
-        crossorigin="anonymous"></script>
-    <!-- Chosen -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
-    <!-- Local Javascript -->
-    <!-- <script src="assets/javascript/app.js"></script> -->
-    <script>
-      // Chosen configuration
-var config = {
-    '.chosen-select': {},
-    '.chosen-select-deselect': { allow_single_deselect: true },
-    '.chosen-select-no-single': { disable_search_threshold: 10 },
-    '.chosen-select-no-results': { no_results_text: 'Oops, nothing found!' },
-    '.chosen-select-width': { width: "95%" }
-}
-for (var selector in config) {
-    $(selector).chosen(config[selector]);
-}
+    <script type="text/javascript">
 
-// Capture the form inputs 
-$("#submit").on("click", function () {
-
-    // Form validation
-    function validateForm() {
-        var isValid = true;
-        $('.form-control').each(function () {
-            if ($(this).val() === '')
-                isValid = false;
-        });
-
-        $('.chosen-select').each(function () {
-
-            if ($(this).val() === "")
-                isValid = false
-        })
-        return isValid;
-    }
-
-    // If all required fields are filled
-    if (validateForm() == true) {
-        // Create an object for the user's data
-        var userData = {
-            name: $("#name").val(),
-            photo: $("#photo").val(),
-            scores: [$("#q1").val(), $("#q2").val(), $("#q3").val(), $("#q4").val(), $("#q5").val(), $("#q6").val(), $("#q7").val(), $("#q8").val(), $("#q9").val(), $("#q10").val(),]
+        // Chosen CSS
+        var config = {
+            '.chosen-select': {},
+            '.chosen-select-deselect': { allow_single_deselect: true },
+            '.chosen-select-no-single': { disable_search_threshold: 10 },
+            '.chosen-select-no-results': { no_results_text: 'Oops, nothing found!' },
+            '.chosen-select-width': { width: "95%" }
+        }
+        for (var selector in config) {
+            $(selector).chosen(config[selector]);
         }
 
+        // Capture the form inputs
+        $("#submit").on("click", function () {
 
-        // Grab the URL of the website
-        var currentURL = window.location.origin;
+            // Form validation
+            function validateForm() {
+                var isValid = true;
+                $('.form-control').each(function () {
+                    if ($(this).val() === '')
+                        isValid = false;
+                });
 
-        // AJAX post the data to the friends API. 
-        $.post(currentURL + "/api/friends", userData, function (data) {
+                $('.chosen-select').each(function () {
 
-            // Grab the result from the AJAX post so that the best match's name and photo are displayed.
-            $("#matchName").text(data.name);
-            $('#matchImg').attr("src", data.photo);
+                    if ($(this).val() === "")
+                        isValid = false
+                })
+                return isValid;
+            }
 
-            // Show the modal with the best match 
-            $("#resultsModal").modal('toggle');
+            // If all required fields are filled
+            if (validateForm() == true) {
+                // Create an object for the user's data
+                var userData = {
+                    name: $("#name").val(),
+                    photo: $("#photo").val(),
+                    scores: [$("#q1").val(), $("#q2").val(), $("#q3").val(), $("#q4").val(), $("#q5").val(), $("#q6").val(), $("#q7").val(), $("#q8").val(), $("#q9").val(), $("#q10").val(),]
+                }
 
+
+                // Grab the URL of the website
+                var currentURL = window.location.origin;
+
+                // AJAX post the data to the friends API.
+                $.post(currentURL + "/api/friends", userData, function (data) {
+
+                    // Grab the result from the AJAX post so that the best match's name and photo are displayed.
+                    $("#matchName").text(data.name);
+                    $('#matchImg').attr("src", data.photo);
+
+                    // Show the modal with the best match
+                    $("#resultsModal").modal('toggle');
+
+                });
+            }
+            else {
+                alert("Please fill out all fields before submitting!");
+            }
+
+            return false;
         });
-    }
-    else {
-        alert("Please fill out all fields before submitting!");
-    }
 
-    return false;
-});
+
     </script>
-</body>
-
-</html>
+ </body>
+ </html>
